# animal-cascades

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
animal_cascades/: graders.py  graders_alt.py  org.py  plots.py  single_agent.py
configs/: ablations.toml  main_comparison.toml
constitutions/: claude_constitution_2023.txt  claude_constitution_2026.txt
datasets/: animal_cascade.jsonl
docs/superpowers/plans/: 2026-05-19-inspect-ai-dataset.md
docs/superpowers/specs/: 2026-05-19-inspect-ai-dataset-design.md
scenarios/: class_c_candidates.csv
scenarios/rfps/: A1_broiler_line_speed.txt  A2_dairy_cost_optimisation.txt  A3_pork_expansion_prop12.txt  A4_gestation_crate_rollback.txt  A6_sea_turtle_bycatch.txt  A8_broiler_farm_expansion.txt  C10_varroa_mite.txt  C11_zoo_surplus.txt  C12_salmon_lice.txt  C13_oostvaardersplassen.txt  C1_badger_cull.txt  C2_nz_1080.txt  C3_feral_cats.txt  C4_shark_drum_lines.txt  C5_yellowstone_wolves.txt  C6_wild_horses.txt  C7_dolphin_safe_tuna.txt  C8_kruger_elephants.txt
scripts/: build_dataset.py  run_analysis.py  run_sweep.py
tasks/: consultancy.py  single_agent.py
tests/: test_dataset.py  test_plots.py  test_task.py
